--- a/index.html
+++ b/index.html
@@ -128,7 +128,27 @@
             </tr>
         </tbody>
     </table>
+       <h2>Key Insights</h2>
+    <ul>
+        <li><strong>ThyGeNEXT/ThyraMIR</strong>: High sensitivity and specificity, often used together for risk stratification.</li>
+        <li><strong>Afirma GSC</strong>: Moderate sensitivity and lower specificity but widely utilized for benign risk stratification.</li>
+        <li><strong>BRAF Mutation</strong>: Excellent specificity, often used for detecting malignancy.</li>
+        <li><strong>ThyroSeq</strong>: Broad molecular panel with reasonable sensitivity and specificity.</li>
+        <li><strong>RAS and TERT Promoter Mutations</strong>: Specific but with varied sensitivity, useful for targeted risk assessment.</li>
+    </ul>
+    <p>These molecular tests are primarily used for indeterminate thyroid nodules (Bethesda III and IV categories) and should be interpreted in conjunction with clinical and ultrasound findings.</p>
 
-    <p>For further details, consult the <a href="#references">References</a> section at the end of this page.</p>
+    <hr>
+
+    <h2>References for the table</h2>
+    <ol>
+        <li><a href="https://thygenext-thyramir.com">ThyGeNEXT/ThyraMIR</a></li>
+        <li><a href="https://www.endocrinology.org/endocrinologist/132-summer-2019/features/molecular-markers-in-diagnosing-thyroid-cancer">Afirma GSC</a></li>
+        <li><a href="https://www.frontiersin.org/journals/oncology/articles/10.3389/fonc.2021.746776/full">BRAF Mutation</a></li>
+        <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8345070/">ThyroSeq</a></li>
+        <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8345070/">RAS Mutation</a></li>
+        <li><a href="https://erc.bioscientifica.com/view/journals/erc/21/5/825.xml">TERT Promoter Mutation</a></li>
+    </ol>
+
 </body>
 </html>
