--- a/index.html
+++ b/index.html
@@ -149,6 +149,71 @@
         <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC8345070/">RAS Mutation</a></li>
         <li><a href="https://erc.bioscientifica.com/view/journals/erc/21/5/825.xml">TERT Promoter Mutation</a></li>
     </ol>
+       <h2>Limitations of Molecular Markers</h2>
+
+    <h3>1. Diagnostic Accuracy</h3>
+    <ul>
+        <li><strong>Sensitivity and Specificity</strong>: Many molecular tests exhibit variable sensitivity and specificity. For example, the Afirma Gene Expression Classifier (GEC) has shown sensitivity ranging from 75% to 100% and specificity from 5% to 53%, while ThyroSeq V2 displays sensitivity from 40% to 100% and specificity from 56% to 93% (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5915469/">PMC</a>).</li>
+        <li><strong>Low Positive Predictive Value (PPV)</strong>: The PPV of some markers, such as RAS mutations, has been reported to be as low as 7% to 25%, indicating that a significant proportion of positive results may not correspond to malignancy (<a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2020.590128/full">Frontiers in Endocrinology</a>).</li>
+    </ul>
+
+    <h3>2. Overlap Between Benign and Malignant Conditions</h3>
+    <p>Many molecular markers are not exclusive to malignant conditions; they can also be present in benign nodules. This overlap complicates the interpretation of results and may lead to unnecessary surgeries or interventions for benign lesions (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3603017/">PMC</a>, <a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2020.590128/full">Frontiers in Endocrinology</a>).</p>
+
+    <h3>3. Emerging Pathological Entities</h3>
+    <p>The introduction of new histopathological classifications, such as Non-Invasive Follicular Thyroid Neoplasm with Papillary-like Nuclear Features (NIFTP), has further complicated the landscape. Molecular tests were developed prior to this classification and may misclassify NIFTP as malignant, thereby affecting their diagnostic performance (<a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2020.590128/full">Frontiers in Endocrinology</a>, <a href="https://pure.johnshopkins.edu/en/publications/preoperative-molecular-markers-in-thyroid-nodules">Johns Hopkins University</a>).</p>
+
+    <h3>4. Sampling Errors</h3>
+    <p>The accuracy of molecular testing is inherently limited by the quality of the fine needle aspiration (FNA) samples. Inadequate sampling can lead to non-diagnostic results or misclassification, which diminishes the reliability of molecular diagnostics (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC3603017/">PMC</a>, <a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2020.590128/full">Frontiers in Endocrinology</a>).</p>
+
+    <h3>5. Cost and Accessibility</h3>
+    <p>The cost-effectiveness of molecular testing remains a concern, particularly in resource-limited settings. While some studies suggest that these tests can reduce unnecessary surgeries, the actual impact on surgical decision-making has been marginal, with only a small percentage of patients experiencing altered management based on molecular testing results (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5915469/">PMC</a>, <a href="https://pure.johnshopkins.edu/en/publications/preoperative-molecular-markers-in-thyroid-nodules">Johns Hopkins University</a>).</p>
+
+    <h3>6. Lack of Long-term Outcome Data</h3>
+    <p>There is insufficient long-term data demonstrating the impact of molecular markers on patient outcomes. Most studies are limited by small sample sizes and single-institution biases, which may not reflect broader clinical practice (<a href="https://www.frontiersin.org/journals/endocrinology/articles/10.3389/fendo.2020.590128/full">Frontiers in Endocrinology</a>, <a href="https://pure.johnshopkins.edu/en/publications/preoperative-molecular-markers-in-thyroid-nodules">Johns Hopkins University</a>).</p>
+
+    <h3>7. Pediatric Considerations</h3>
+    <p>Current data do not support the routine use of molecular markers in pediatric patients due to a lack of validation studies in this population, limiting their applicability in younger patients (<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC5915469/">PMC</a>, <a href="https://pure.johnshopkins.edu/en/publications/preoperative-molecular-markers-in-thyroid-nodules">Johns Hopkins University</a>).</p>
+
+    <p>In summary, while molecular markers can provide valuable information in the evaluation of thyroid nodules, their limitations must be carefully considered when interpreting results and making clinical decisions. A comprehensive approach that includes clinical history, imaging findings, and cytological analysis remains essential in managing indeterminate thyroid nodules effectively.</p>
+
+       <h1>Differences Between ThyroSeq v3 and Latest Afirma GSC Test</h1>
+    <p>The salient differences between ThyroSeq v3 and the latest Afirma Gene Sequencing Classifier (GSC) are as follows:</p>
+
+    <h2>1. Test Methodology</h2>
+    <ul>
+        <li><strong>ThyroSeq v3</strong>: Uses next-generation sequencing to detect both DNA and RNA alterations (<a href="https://academic.oup.com/jcem/article/108/9/e698/7095610?login=false">Journal of Clinical Endocrinology &amp; Metabolism</a>).</li>
+        <li><strong>Afirma GSC</strong>: Primarily an RNA-based test (<a href="https://www.thyroid.org/patient-thyroid-information/ct-for-patients/september-2022/vol-15-issue-9-p-5-6/">Thyroid.org</a>).</li>
+    </ul>
+
+    <h2>2. Diagnostic Performance</h2>
+    <ul>
+        <li><strong>Sensitivity</strong>: ThyroSeq v3 (97%) vs. Afirma GSC (100%) (<a href="https://aot.amegroups.org/article/view/7048/html">Annals of Thyroid</a>).</li>
+        <li><strong>Specificity</strong>: ThyroSeq v3 (85%) vs. Afirma GSC (80%) (<a href="https://aot.amegroups.org/article/view/7048/html">Annals of Thyroid</a>).</li>
+    </ul>
+
+    <h2>3. Cost-Effectiveness</h2>
+    <ul>
+        <li><strong>ThyroSeq v3</strong>: $14,277 per correct diagnosis (<a href="https://www.thyroseq.com/physicians/test-description/featured-publications/molecular-testing-of-bethesda-iiiiv-thyroid-nodules-a-cost-effectiveness-analysis/">ThyroSeq</a>).</li>
+        <li><strong>Afirma GSC</strong>: $17,873 per correct diagnosis (<a href="https://www.thyroseq.com/physicians/test-description/featured-publications/molecular-testing-of-bethesda-iiiiv-thyroid-nodules-a-cost-effectiveness-analysis/">ThyroSeq</a>).</li>
+    </ul>
+
+    <h2>4. "Rule-In" and "Rule-Out" Capabilities</h2>
+    <ul>
+        <li><strong>ThyroSeq v3</strong>: Shows better overall performance (AUC 0.95) and superior "rule-out" ability with a Negative Likelihood Ratio (NLR) of 0.02 (<a href="https://pubmed.ncbi.nlm.nih.gov/34054725/">PubMed</a>).</li>
+        <li><strong>Afirma GSC</strong>: Good overall performance (AUC 0.90) but less effective "rule-out" ability compared to ThyroSeq v3 (<a href="https://pubmed.ncbi.nlm.nih.gov/34054725/">PubMed</a>).</li>
+    </ul>
+
+    <h2>5. Impact on Clinical Management</h2>
+    <p>Both tests demonstrate a similar ability to help avoid unnecessary surgeries, with about 49% of patients avoiding surgery based on benign/negative results (<a href="https://aot.amegroups.org/article/view/7048/html">Annals of Thyroid</a>).</p>
+
+    <h2>6. Preference in Cost-Effectiveness Analysis</h2>
+    <p>ThyroSeq v3 was preferred over Afirma GSC in 68.5% of cases during a probabilistic sensitivity analysis (<a href="https://www.thyroseq.com/physicians/test-description/featured-publications/molecular-testing-of-bethesda-iiiiv-thyroid-nodules-a-cost-effectiveness-analysis/">ThyroSeq</a>).</p>
+
+    <hr>
+
+    <h2>Summary</h2>
+    <p>While both tests show high sensitivity and improved specificity compared to their previous versions, ThyroSeq v3 appears to have a slight edge in overall performance and cost-effectiveness based on current evidence.</p>
 
 </body>
 </html>
